--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 html {
   font-family: Arial,Helvetica,sans-serif;
 }
-body {background-color: red;}
+body {background-color: whitesmoke;}
 
 #card {
 width: 300px;
